--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,6 @@
 sonar.projectKey=SylvainJanet_personal-website
 sonar.organization=sylvainjanet
+sonar.projectBaseDir=/github/workspace/personal-website
 
 # This is the name and version displayed in the SonarCloud UI.
 #sonar.projectName=personal-website
