--- a/.github/workflows/sonarcloud.yml
+++ b/.github/workflows/sonarcloud.yml
@@ -59,7 +59,7 @@ jobs:
             -Dsonar.projectKey=SylvainJanet_personal-website
             -Dsonar.organization=sylvainjanet
             -Dsonar.sources=.
-            -Dsonar.projectBaseDir= /personal-website
+            -Dsonar.projectBaseDir=/personal-website
             # Comma-separated paths to directories containing main source files.
             #-Dsonar.sources=. # optional, default is project base directory
             # When you need the analysis to take place in a directory other than the one from which it was launched
